# gnr-async-mail-service

./: README.md  TROUBLESHOOTING.md  claude.md  config.ini  diagnose.py  docker-compose.yml  example_client.py  fake_smtp_server.py  main.py  pyproject.toml  requirements.txt  setup_test_env.sh  test_dispatch.py
async_mail_service/: bounce_detection.py  core.py  persistence.py  s3_attachment_storage.py  text_extractor.py
docs/: architecture_overview.rst  conf.py  example_client.rst  index.rst  installation.rst
review/: risposta_codex.md
tests/: test_bounce_detection.py
